@@ -546,6 +546,16 @@ void CSMFGroundDrawer::DecreaseDetail()
 	}
 }
 
+void CSMFGroundDrawer::SetDetail(int newGroundDetail)
+{
+	if (newGroundDetail < 4)
+		newGroundDetail = 4;
+
+	groundDetail = newGroundDetail;
+	configHandler->Set("GroundDetail", groundDetail);
+	LOG("GroundDetail is now %i", groundDetail);
+}
+
 
 
 int CSMFGroundDrawer::GetGroundDetail(const DrawPass::e& drawPass) const
